[gd_scene load_steps=2 format=3 uid="uid://ck8fw6x7e6mjo"]

[ext_resource type="Script" path="res://Scripts/UI/hud.gd" id="1_uwioq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_uwioq")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="lblBulletTime" type="Label" parent="AspectRatioContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Bullet-Time:"
horizontal_alignment = 2

[node name="lblAmmoCount" type="Label" parent="AspectRatioContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Ammo Remaining:"
horizontal_alignment = 2

[node name="lblTargetsLeft" type="Label" parent="AspectRatioContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Targets Remaining:"
horizontal_alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 8

[node name="SlowdownBar" type="ProgressBar" parent="AspectRatioContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
step = 1.0

[node name="lblAmmoCountNum" type="Label" parent="AspectRatioContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "0"

[node name="lblTargetsLeftNum" type="Label" parent="AspectRatioContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "0
"
